fix Garbage Collection for native image